--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     
-    <link href=".less/avi.less" rel="stylesheet/less">
+    <link href="less/avi.less" rel="stylesheet/less">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
