--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="col-md-12">
          <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img class="" src="../img/logo-claro.png" width="" height="50"/></a>
+          <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
         </div>
         </div>
       </div>
