--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="col-md-12">
          <div class="navbar-header">
           <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
+          <h1>Administrador Virtual</h1>
         </div>
         </div>
       </div>
@@ -42,7 +43,7 @@
     <div class="bg-image">
       <div class="container">
       <div class="col-md-8">
-        <div class="hero-unit">
+        <div class="hero-unit hidden-xs hidden-sm">
           <h1>¡Bienvenido al administrador Virtual!</h1>
           <ul>
             <li>Administra fácilmente la telefonía de toda tu empresa desde un sólo lugar.</li>
@@ -67,7 +68,7 @@
               <input type="checkbox" value="remember-me"> Recordarme
             </label>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+          <a class="btn btn-lg btn-primary btn-block" href="home.html">Entrar</a>
         </form>
       </div>
     </div>
