--- a/home.html
+++ b/home.html
@@ -18,6 +18,20 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
 
+
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
   <body>
@@ -26,60 +40,163 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
           <h1>Administrador Virtual</h1>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-  <a id="dLabel" data-target="#" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-    Dropdown trigger
-    <span class="caret"></span>
-  </a>
-
-  <ul class="dropdown-menu" aria-labelledby="dLabel">
-    ...
-  </ul>
-</li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accesos <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#"><strong>Usuarios</strong></a></li>
+                  <li><a href="#">Op1</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#"><strong>Roles</strong></a></li>
+                  <li><a href="#">Op1</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reportes<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Op1</a></li>
+                  <li><a href="#">Op2</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Planes y tarifas<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Op1</a></li>
+                  <li><a href="#">Op2</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plataforma<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Op1</a></li>
+                  <li><a href="#">Op2</a></li>
+                </ul>
+            </li>
+            <li class="dropdown active">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clientes<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Configuración clientes</a></li>
+                  <li><a href="#">Administración</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Monitoreo<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Op1</a></li>
+                  <li><a href="#">Op2</a></li>
+                </ul>
+            </li>
           </ul>
-          <p class="navbar-text navbar-right">Bienvenido, <a href="#" class="navbar-link">Mark Otto</a></p>
+          <ul class="nav navbar-nav navbar-right">
+            <li id="fat-menu" class="dropdown">
+              <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">sac_sv <span class="caret"></span> </a>
+              <ul class="dropdown-menu" aria-labelledby="drop3">
+                <li><a href="#">Cerrar sesión</a></li>
+<!--                 <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li> -->
+              </ul>
+            </li>
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
 
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
+      <!-- Content for Administración de clientes -->
+
+      <ol class="breadcrumb">
+        <li><a href="#">Home</a></li>
+        <li class="active">Configuración de clientes</li>
+      </ol>
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>Búsqueda de clientes</h2>
+        </div>
+        <div class="col-sm-12">
+          <form class="row">
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>Búsqueda por orden alfabético</label>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group" role="group" aria-label="First group"> 
+                    <button type="button" class="btn btn-default">A</button>
+                    <button type="button" class="btn btn-default">B</button>
+                    <button type="button" class="btn btn-default">C</button>
+                    <button type="button" class="btn btn-default">D</button>
+                    <button type="button" class="btn btn-default">E</button>
+                    <button type="button" class="btn btn-default">F</button>
+                    <button type="button" class="btn btn-default">G</button>
+                    <button type="button" class="btn btn-default">H</button>
+                    <button type="button" class="btn btn-default">I</button>
+                    <button type="button" class="btn btn-default">J</button>
+                    <button type="button" class="btn btn-default">K</button>
+                    <button type="button" class="btn btn-default">L</button>
+                    <button type="button" class="btn btn-default">M</button>
+                    <button type="button" class="btn btn-default">N</button>
+                    <button type="button" class="btn btn-default">O</button>
+                    <button type="button" class="btn btn-default">P</button>
+                    <button type="button" class="btn btn-default">Q</button>
+                    <button type="button" class="btn btn-default">R</button>
+                    <button type="button" class="btn btn-default">S</button>
+                    <button type="button" class="btn btn-default">T</button>
+                    <button type="button" class="btn btn-default">U</button>
+                    <button type="button" class="btn btn-default">V</button>
+                    <button type="button" class="btn btn-default">W</button>
+                    <button type="button" class="btn btn-default">Y</button>
+                    <button type="button" class="btn btn-default">X</button>
+                    <button type="button" class="btn btn-default">Z</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-7">
+              <div class="row">
+                <div class="form-group col-sm-6">
+                  <label for="1">Identificador tributario</label>
+                  <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
+                </div>
+                <div class="form-group col-sm-6">
+                  <label for="2">Teléfono</label>
+                  <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+                </div>
+              </div>
+            </div>
+            <div class="form-group col-sm-7">
+              <label for="3">Nombre</label>
+              <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
+            </div>
+            <div class="col-sm-12">
+              <button type="submit" class="btn btn-default btn-primary">Buscar</button>
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-12"></div>
+
       </div>
+
 
     </div> <!-- /container -->
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  </body>
+      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/dropdown.js"></script>
+    <script src="js/button.js"></script>
     <script src="js/less.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+
     <script type="text/javascript">
-      $( document ).ready(function() {
-        $('.dropdown-toggle').dropdown();
+      jQuery( document ).ready(function( $ ) {
+        $( ".dropdown-toggle" ).dropdown();
+        //alert("I am an alert box!");
       });
-
-      
     </script>
-
-  </body>
-  </body>
 </html>
