--- a/clients-results.html
+++ b/clients-results.html
@@ -12,6 +12,7 @@
     <title>Administrador Virtual</title>
 
     <link href="less/avi.less" rel="stylesheet/less">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -113,72 +114,47 @@
 
       <ol class="breadcrumb">
         <li><a href="#">Home</a></li>
-        <li class="active">Configuración de clientes</li>
+        <li><a href="clients.html">Configuración de clientes</a></li>
+        <li class="active">Resultado de clientes</li>
       </ol>
+
       <div class="row">
         <div class="col-sm-12">
-          <h2>Búsqueda de clientes</h2>
+          <h2>Resultado búsqueda de clientes</h2>
         </div>
-        <div class="col-sm-12">
-          <form class="row">
-            <div class="col-sm-12">
-              <div class="form-group">
-                <label>Búsqueda por orden alfabético</label>
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group" role="group" aria-label="First group"> 
-                    <button type="button" class="btn btn-default">A</button>
-                    <button type="button" class="btn btn-default">B</button>
-                    <button type="button" class="btn btn-default">C</button>
-                    <button type="button" class="btn btn-default">D</button>
-                    <button type="button" class="btn btn-default">E</button>
-                    <button type="button" class="btn btn-default">F</button>
-                    <button type="button" class="btn btn-default">G</button>
-                    <button type="button" class="btn btn-default">H</button>
-                    <button type="button" class="btn btn-default">I</button>
-                    <button type="button" class="btn btn-default">J</button>
-                    <button type="button" class="btn btn-default">K</button>
-                    <button type="button" class="btn btn-default">L</button>
-                    <button type="button" class="btn btn-default">M</button>
-                    <button type="button" class="btn btn-default">N</button>
-                    <button type="button" class="btn btn-default">O</button>
-                    <button type="button" class="btn btn-default">P</button>
-                    <button type="button" class="btn btn-default">Q</button>
-                    <button type="button" class="btn btn-default">R</button>
-                    <button type="button" class="btn btn-default">S</button>
-                    <button type="button" class="btn btn-default">T</button>
-                    <button type="button" class="btn btn-default">U</button>
-                    <button type="button" class="btn btn-default">V</button>
-                    <button type="button" class="btn btn-default">W</button>
-                    <button type="button" class="btn btn-default">Y</button>
-                    <button type="button" class="btn btn-default">X</button>
-                    <button type="button" class="btn btn-default">Z</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-7">
-              <div class="row">
-                <div class="form-group col-sm-6">
-                  <label for="1">Identificador tributario</label>
-                  <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
-                </div>
-                <div class="form-group col-sm-6">
-                  <label for="2">Teléfono</label>
-                  <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
-                </div>
-              </div>
-            </div>
-            <div class="form-group col-sm-7">
-              <label for="3">Nombre</label>
-              <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
-            </div>
-            <div class="col-sm-12">
-              <button type="submit" class="btn btn-default btn-primary">Buscar</button>
-            </div>
-          </form>
+        <div class="col-sm-7">
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Cliente</th>
+                  <th>VPN</th>
+                  <th>VPN Regional</th>
+                  <th colspan="1"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="">Omnisport Movil</a></td>
+                  <td>Omnisport VPN</td>
+                  <td></td>
+                  <td>
+                    <a href="#" class="btn btn-default btn-xs">
+                      <i class="fa fa-pencil"></i>
+                    <a/>
+                    <a href="#" class="btn btn-default btn-xs">
+                      <i class="fa fa-trash"></i>
+                    <a/>
+                    <a href="#" class="btn btn-default btn-xs">
+                      <i class="fa fa-cogs"></i>
+                    <a/>
+                  </td>
+                </tr>
+              </tbody>
+          </table>
+          <a class="btn btn-default" href="clients.html">Volver a búsqueda</a>
         </div>
-        <div class="col-sm-12"></div>
-
+        </div>
       </div>
 
 
