--- a/5.1.1.html
+++ b/5.1.1.html
@@ -135,11 +135,11 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><a href="">Omnisport Movil</a></td>
+                  <td><a href="5.1.1.1.html">Omnisport Movil</a></td>
                   <td>Omnisport VPN</td>
                   <td></td>
                   <td>
-                    <a href="#" class="btn btn-default btn-xs">
+                    <a href="5.1.1.2.html" class="btn btn-default btn-xs">
                       <i class="fa fa-pencil"></i>
                     <a/>
                     <a href="#" class="btn btn-default btn-xs">
@@ -152,7 +152,7 @@
                 </tr>
               </tbody>
           </table>
-          <a class="btn btn-default" href="clients.html">Volver a búsqueda</a>
+          <a class="btn btn-default" href="5.1.0.html">Volver a búsqueda</a>
         </div>
         </div>
       </div>
