--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="container">
       <div class="col-md-8">
         <div class="hero-unit hidden-xs hidden-sm">
-          <h1>¡Bienvenido al administrador Virtual!</h1>
+          <h1>CONTROLA Y ADMINISTRA VÍA WEB</br> LA TELEFONÍA DE TUS CLIENTES</h1>
           <ul>
-            <li>Administra fácilmente la telefonía de toda tu empresa desde un sólo lugar.</li>
+            <li>Permite mayor flexibilidad en tarifas por tipo de usuario, destino de llamadas y horario de llamadas.</li>
             <li>Crea usuarios, roles y consulta la actividad de cada perfil.</li>
             <li>Controla los gastos de telefonía en forma eficiente.</li>
           </ul>
