Cambios en diagramación de formularios Anexo de páginas Modificación árbol

--- a/5.1.0.html
+++ b/5.1.0.html
@@ -96,10 +96,6 @@
               <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">sac_sv <span class="caret"></span> </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
                 <li><a href="#">Cerrar sesión</a></li>
-<!--                 <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li> -->
               </ul>
             </li>
           </ul>
@@ -157,20 +153,24 @@
               </div>
             </div>
             <div class="col-sm-7">
-              <div class="row">
-                <div class="form-group col-sm-6">
-                  <label for="1">Identificador tributario</label>
-                  <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
-                </div>
-                <div class="form-group col-sm-6">
-                  <label for="2">Teléfono</label>
-                  <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="form-group col-sm-6">
+                      <label for="1">Identificador tributario</label>
+                      <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
+                    </div>
+                    <div class="form-group col-sm-6">
+                      <label for="2">Teléfono</label>
+                      <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+                    </div>
+                    <div class="form-group col-sm-7">
+                      <label for="3">Nombre</label>
+                      <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="form-group col-sm-7">
-              <label for="3">Nombre</label>
-              <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
             </div>
             <div class="col-sm-12">
               <a class="btn btn-default btn-primary" href="5.1.1.html">Buscar</a>
