--- a/5.1.1.html
+++ b/5.1.1.html
@@ -97,10 +97,6 @@
               <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">sac_sv <span class="caret"></span> </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
                 <li><a href="#">Cerrar sesión</a></li>
-<!--                 <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li> -->
               </ul>
             </li>
           </ul>
@@ -123,37 +119,43 @@
           <h2>Resultado búsqueda de clientes</h2>
         </div>
         <div class="col-sm-7">
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Cliente</th>
-                  <th>VPN</th>
-                  <th>VPN Regional</th>
-                  <th colspan="1"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><a href="5.1.1.1.html">Omnisport Movil</a></td>
-                  <td>Omnisport VPN</td>
-                  <td></td>
-                  <td>
-                    <a href="5.1.1.2.html" class="btn btn-default btn-xs">
-                      <i class="fa fa-pencil"></i>
-                    <a/>
-                    <a href="#" class="btn btn-default btn-xs">
-                      <i class="fa fa-trash"></i>
-                    <a/>
-                    <a href="#" class="btn btn-default btn-xs">
-                      <i class="fa fa-cogs"></i>
-                    <a/>
-                  </td>
-                </tr>
-              </tbody>
-          </table>
-          <a class="btn btn-default" href="5.1.0.html">Volver a búsqueda</a>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>Cliente</th>
+                      <th>VPN</th>
+                      <th>VPN Regional</th>
+                      <th colspan="1"></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="5.1.1.1.html">Omnisport Movil</a></td>
+                      <td>Omnisport VPN</td>
+                      <td></td>
+                      <td>
+                        <a href="5.1.1.2.html" class="btn btn-default btn-xs">
+                          <i class="fa fa-pencil"></i>
+                        <a/>
+                        <a href="#" class="btn btn-default btn-xs">
+                          <i class="fa fa-trash"></i>
+                        <a/>
+                        <a href="#" class="btn btn-default btn-xs">
+                          <i class="fa fa-cogs"></i>
+                        <a/>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="col-sm-12">
+          <a class="btn btn-default" href="5.1.0.html">Volver a búsqueda</a>
         </div>
       </div>
 
