--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <input type="checkbox" value="remember-me"> Recordarme
             </label>
           </div>
-          <a class="btn btn-lg btn-primary btn-block" href="clients.html">Entrar</a>
+          <a class="btn btn-lg btn-primary btn-block" href="5.1.0.html">Entrar</a>
         </form>
       </div>
     </div>
