--- a/components.html
+++ b/components.html
@@ -236,6 +236,92 @@
       </div>
       <!--  BOTONES DE CIERRE DE ACCION -->
 
+      <div>
+        <h2>06. Búsqueda alfabética</h2>
+        <img src="img/components/busqueda-alfabetica.png" width="auto">
+      </div>
+      <br>
+      <!--  BÚSQUEDA ALFABÉTICA -->
+      <div class="row">
+        <div class="col-sm-12">
+              <div class="form-group">
+                <label>Búsqueda por orden alfabético</label>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group" role="group" aria-label="First group"> 
+                    <button type="button" class="btn btn-default">A</button>
+                    <button type="button" class="btn btn-default">B</button>
+                    <button type="button" class="btn btn-default">C</button>
+                    <button type="button" class="btn btn-default">D</button>
+                    <button type="button" class="btn btn-default">E</button>
+                    <button type="button" class="btn btn-default">F</button>
+                    <button type="button" class="btn btn-default">G</button>
+                    <button type="button" class="btn btn-default">H</button>
+                    <button type="button" class="btn btn-default">I</button>
+                    <button type="button" class="btn btn-default">J</button>
+                    <button type="button" class="btn btn-default">K</button>
+                    <button type="button" class="btn btn-default">L</button>
+                    <button type="button" class="btn btn-default">M</button>
+                    <button type="button" class="btn btn-default">N</button>
+                    <button type="button" class="btn btn-default">O</button>
+                    <button type="button" class="btn btn-default">P</button>
+                    <button type="button" class="btn btn-default">Q</button>
+                    <button type="button" class="btn btn-default">R</button>
+                    <button type="button" class="btn btn-default">S</button>
+                    <button type="button" class="btn btn-default">T</button>
+                    <button type="button" class="btn btn-default">U</button>
+                    <button type="button" class="btn btn-default">V</button>
+                    <button type="button" class="btn btn-default">W</button>
+                    <button type="button" class="btn btn-default">Y</button>
+                    <button type="button" class="btn btn-default">X</button>
+                    <button type="button" class="btn btn-default">Z</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </div>
+      <!--  BÚSQUEDA ALFABÉTICA -->
+
+      <div>
+        <h2>07. Formulario de Búsqueda</h2>
+        <img src="img/components/formulario-busqueda.png" width="auto">
+      </div>
+      <br>
+      <!--  FORMULARIO DE BÚSQUEDA -->
+      <div class="row">
+        <div class="col-sm-10">
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Búsqueda de línea
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="form-group col-sm-6">
+                      <label for="1">línea</label>
+                      <input type="text" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
+                    </div>
+                    <div class="form-group col-sm-6">
+                      <label for="2">Nombre usuario</label>
+                      <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+                    </div>
+                    <div class="form-group col-sm-6">
+                      <label for="3">Perfil</label>
+                      <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  FORMULARIO DE BÚSQUEDA -->
+
     
     </div>
 
