--- a/5.1.0.html
+++ b/5.1.0.html
@@ -78,10 +78,26 @@
             </li>
             <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clientes<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Configuración clientes</a></li>
-                  <li><a href="#">Administración</a></li>
-                </ul>
+              <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                <li><a href="#">Some action</a></li>
+                <li><a href="#">Some other action</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-submenu">
+                  <a tabindex="-1" href="#">Hover me for more options</a>
+                    <ul class="dropdown-menu">
+                      <li><a tabindex="-1" href="#">Second level</a></li>
+                      <li class="dropdown-submenu">
+                        <a href="#">Even More..</a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">3rd level</a></li>
+                          <li><a href="#">3rd level</a></li>
+                        </ul>
+                      </li>
+                    <li><a href="#">Second level</a></li>
+                    <li><a href="#">Second level</a></li>
+                  </ul>
+                </li>
+              </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Monitoreo<span class="caret"></span></a>
