Menú de segundo nivel.

--- a/components.html
+++ b/components.html
@@ -322,6 +322,28 @@
       </div>
       <!--  FORMULARIO DE BÚSQUEDA -->
 
+      <div>
+        <h2>08. Menu Contextual</h2>
+        <img src="img/components/formulario-busqueda.png" width="auto">
+      </div>
+      <br>
+      <!--  FORMULARIO DE BÚSQUEDA -->
+      <div class="row">
+        <div class="col-sm-12">
+          <ul class="nav nav-pills">
+            <li role="presentation" class="active"><a href="#">Crear Usuario</a></li>
+            <li role="presentation"><a href="#">Modificar usuario</a></li>
+            <li role="presentation"><a href="#">Modificar Estado</a></li>
+            <li role="presentation"><a href="#">Consultar usuario</a></li>
+            <li role="presentation"><a href="#">Modificar password</a></li>
+            <li role="presentation"><a href="#">Consultas</a></li>
+            <li role="presentation"><a href="#">Usuarios por aplicación</a></li>
+            <li role="presentation"><a href="#">Ayuda</a></li>
+          </ul>
+        </div>
+      </div>
+      <!--  FORMULARIO DE BÚSQUEDA -->
+
     
     </div>
 
