--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
           </div>
         </div>
       </div>
-      <div class="pre-header">
+      <div class="pre-header hidden-xs">
         <div class="container">
           <div class="col-md-12">
-            Personas
-            Empresas
+            <ul class="title-claro list-unstyled">
+              <li>Personas</li> 
+              <li>Empresas</li>
+            </ul>
           </div>
         </div>
       </div>
