--- a/components.html
+++ b/components.html
@@ -18,12 +18,13 @@
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
 
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
