--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
 
@@ -31,7 +32,7 @@
 
   <body class="signin">
     <div class="band-black"></div>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="band-black">
         <div class="container">
           <div class="col-md-12">
