--- a/5.1.1.1.html
+++ b/5.1.1.1.html
@@ -38,7 +38,7 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
